--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "ws": "^8.16.0"
   }
 }
